# cardano-open-oracle-protocol

./: .envrc  .gitignore  00-orcfax.md  LICENSE  NOTICE  README.md  flake.nix  pkgs.nix  pre-commit-check.nix  pre-commit.nix
coop-api/lbf/: build.nix
coop-api/lbf/Coop/Validation/: Plutus.lbf
coop-api/proto/cardano-proto-extras/: CHANGELOG.md  build.nix
coop-api/proto/js/: package-lock.json
coop-docs/: 00-design.md  01-definitions.md  02-onchain-architecture.md  02-plutus-protocol.md  03-frontend-protocol.md  03-publishing-fact-statements.md  03-publishing-protocol.md  04-backend-protocol.md  05-json-plutus.md  build.nix
coop-docs/ideas/: 00-onchain-db.md  04-fee-escrow.md
coop-extras/coop-env/: aux.bash  build.nix  coop-proto  protocol.json  resources
coop-extras/json-fact-statement-store/: .envrc  CHANGELOG.md  Makefile  build.nix  json-fact-statement-store.cabal
coop-extras/json-fact-statement-store/app/: BeamConfig.hs  FactStatementStoreGrpc.hs  Genesis.hs  InsertFs.hs  Main.hs
coop-extras/json-fact-statement-store/resources/: certificate.csr  certificate.pem  key.pem
coop-extras/plutus-json/: .envrc  CHANGELOG.md  build.nix  plutus-json.cabal
coop-extras/plutus-json/app/: Main.hs
coop-extras/plutus-json/src/: PlutusJson.hs
coop-extras/plutus-json/test/: Main.hs
coop-extras/tutorial/: .envrc  aux.bash  build.nix
coop-hs-types/: .envrc  build.nix  coop-hs-types.cabal
coop-hs-types/src/Coop/: PlutusOrphans.hs  Types.hs
coop-pab/: Makefile  aux.bash  aux.sh  build.nix  coop-pab.cabal
coop-pab/app/: Main.hs
coop-pab/app/Coop/Cli/: Aux.hs  Deploy.hs  GarbageCollect.hs  GetState.hs  MintAuth.hs  MintCertRdmrs.hs  RedistributeAuth.hs  TxBuilderGrpc.hs
coop-pab/resources/: certificate.csr  certificate.pem  coop-deployment.json  coop-state.json  key.pem  pabConfig.yaml
coop-pab/src/Cardano/Oracle/Pab/: Aux.hs
coop-pab/src/Coop/: Pab.hs  ProtoAux.hs
coop-pab/src/Coop/Pab/: Aux.hs
coop-pab/test/: Aux.hs  Main.hs
coop-plutus/: .envrc  build.nix  coop-plutus.cabal  coop-plutus.json  instanceMp.plutus
coop-plutus/app/: Main.hs
coop-plutus/app/Coop/Cli/: Compile.hs
coop-plutus/resources/: sample.json  sample.pd.cbor
coop-plutus/src/Cardano/Oracle/Plutus/: Aux.hs
coop-plutus/src/Coop/: Plutus.hs
coop-plutus/src/Coop/Plutus/: Aux.hs  Types.hs
coop-plutus/test/: Main.hs
coop-plutus/test/Coop/Plutus/: Test.hs
coop-plutus/test/Coop/Plutus/Test/: Generators.hs
coop-plutus/test/Coop/Test/: Plutus.hs
coop-proto/: .envrc  Makefile  build.nix  cardano.proto  coop.proto  fact-statement-store-service.proto  plutus.proto  publisher-service.proto  tx-builder-service.proto
coop-proto/cardano-proto-extras/: .envrc  cardano-proto-extras.cabal
coop-proto/cardano-proto-extras/src/Cardano/Proto/: Aux.hs
coop-proto/js/: Makefile  client.js  package.json
coop-publisher/: .envrc  Makefile  aux.bash  aux.sh  build.nix  certificate.pem  coop-publisher.cabal  ssl-extensions-x509.conf
coop-publisher/app/: Main.hs
coop-publisher/app/Coop/Cli/: PublisherGrpc.hs
coop-pure/: .envrc  LICENSE  coop-pure.cabal
coop-pure/app/: Main.hs
coop-pure/app/Coop/Pure/: Datums.hs  MerkleTree.hs
coop-validation/: .envrc  build.nix  coop-validation.cabal
coop-validation/app/: Main.hs
coop-validation/app/Coop/Cli/: Compile.hs
coop-validation/src/Coop/: Validation.hs
coop-validation/src/Coop/Validation/: Aux.hs  Queries.hs
coop-validation/src/Coop/Validation/Policies/: Authentication.hs  Aux.hs  Certificate.hs  FactStatement.hs  Main.hs
coop-validation/src/Coop/Validation/Validators/: Certificate.hs  Main.hs
docs/: 00-design.md  01-roadmap.md  02-meta-documentation.md  OrcFax.hs  design.md  roadmap.md
docs/ideas/: 00-onchain-db.md  01-offchain-db-mtree.md  02-signature-scheme.md  03-comparative-summary.md
docs/interactions/: 00-publish-a-fact-statement.md
docs/proposals/: 00-onchain-db.md  01-offchain-db-mtree.md  02-signature-scheme.md  03-comparative-summary.md
nix/: protobuf-hs.nix
oracle-hs-types/: oracle-hs-types.cabal
oracle-hs-types/src/Cardano/Oracle/: Types.hs
oracle-pab/: .envrc  CHANGELOG.md  build.nix  oracle-pab.cabal
oracle-pab/app/: Main.hs
oracle-pab/app/Cardano/Oracle/Cli/: Deploy.hs
oracle-pab/src/Cardano/Oracle/: Aux.hs  Pab.hs
oracle-pab/src/Cardano/Oracle/Pab/: Aux.hs
oracle-pab/test/: Main.hs
oracle-plutus/: CHANGELOG.md  build.nix  hie.yaml  oracle-plutus.cabal
oracle-plutus/app/: Main.hs
oracle-plutus/app/Cardano/Oracle/Cli/: Compile.hs
oracle-plutus/src/Cardano/Oracle/: Plutus.hs
oracle-plutus/src/Cardano/Oracle/Plutus/: Types.hs
oracle-pure/: build.nix  oracle-pure.cabal
oracle-pure/app/: Main.hs
oracle-pure/app/Cardano/Oracle/Pure/: Datums.hs  MerkleTree.hs
oracle-service/: Makefile  build.nix  certificate.csr  certificate.pem  key.pem  oracle-service.cabal
oracle-service/app/: Main.hs
proto/: Setup.hs  build.nix  oracle.proto  orcfax-proto.cabal  proto.nix
proto/haskell/: Setup.hs  build.nix  cardano-oracle-proto.cabal  orcfax-proto.cabal
proto/js/: Makefile  client.js  index.html  package-lock.json  package.json
pure-impl/: CHANGELOG.md  build.nix  cardano-open-oracle-protocol.cabal  pure-impl.nix
pure-impl/app/: Main.hs  OrcFax.hs
pure-impl/app/OrcFax/: Datums.hs  MerkleTree.hs
