cabal-version: 3.0
name:          coop-pab
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    info@mlabs.city
author:        mlabs-haskell
description:
  COOP BPI based PAB programs (Contracts) for testing and interacting with the Plutus counterpart

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  exposed-modules:
    Cardano.Oracle.Pab
    Cardano.Oracle.Pab.Aux

  hs-source-dirs:  src
  build-depends:
    , aeson
    , base
    , bot-plutus-interface
    , containers
    , coop-hs-types
    , directory
    , filepath
    , plutip
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-pab
    , plutus-script-utils
    , process
    , stm
    , text
    , uuid

test-suite coop-pab-tests
  import:         common-language
  build-depends:
    , base
    , coop-hs-types
    , coop-pab
    , data-default
    , plutip
    , plutus-contract
    , plutus-ledger
    , tasty
    , text

  hs-source-dirs: test
  main-is:        Main.hs
  ghc-options:    -Wall -threaded -rtsopts
  type:           exitcode-stdio-1.0

executable coop-pab-cli
  import:         common-language
  main-is:        Main.hs
  hs-source-dirs: app
  other-modules:  Cardano.Oracle.Cli.Deploy
  build-depends:
    , aeson
    , base
    , bot-plutus-interface
    , containers
    , coop-hs-types
    , coop-pab
    , directory
    , filepath
    , optparse-applicative
    , plutus-contract
    , plutus-ledger-api
    , plutus-pab
    , process
    , stm
    , text
    , uuid
