cabal-version:      3.0
name:               coop-plutus
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         info@mlabs.city
author:             mlabs-haskell
description:        COOP Plutus programs (validators and minting policies)

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wno-unused-do-bind
    -Wno-partial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wno-name-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
    OverloadedRecordDot

  default-language:   Haskell2010

library
  import:          common-language
  exposed-modules:
    Cardano.Oracle.Plutus
    Cardano.Oracle.Plutus.Aux
    Cardano.Oracle.Plutus.Types

  hs-source-dirs:  src
  build-depends:
    , base
    , coop-hs-types
    , generics-sop
    , plutarch
    , plutarch-extra
    , plutus-ledger-api
    , plutus-tx

executable coop-plutus-cli
  import:         common-language
  main-is:        Main.hs
  hs-source-dirs: app
  other-modules:  Cardano.Oracle.Cli.Compile
  build-depends:
    , aeson
    , base
    , bytestring
    , coop-hs-types
    , coop-plutus
    , optparse-applicative
    , plutarch
    , plutus-ledger-api
