cabal-version: 3.0
name:          coop-plutus
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    info@mlabs.city
author:        mlabs-haskell
description:   COOP Plutus programs (validators and minting policies)

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wunused-do-bind
    -Wpartial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wname-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists
    -Wredundant-constraints -Wmissing-export-lists
    -Wmissing-deriving-strategies

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
    OverloadedRecordDot

  default-language:   Haskell2010

library
  import:          common-language
  exposed-modules:
    Coop.Plutus
    Coop.Plutus.Aux
    Coop.Plutus.Types

  hs-source-dirs:  src
  build-depends:
    , base
    , bytestring
    , coop-hs-types
    , cryptonite
    , generics-sop
    , memory
    , plutarch
    , plutarch-extra
    , plutus-ledger-api
    , plutus-tx

executable coop-plutus-cli
  import:         common-language
  main-is:        Main.hs
  hs-source-dirs: app
  other-modules:  Coop.Cli.Compile
  build-depends:
    , aeson
    , base
    , bytestring
    , coop-hs-types
    , coop-plutus
    , optparse-applicative
    , plutarch
    , plutus-ledger-api

test-suite coop-plutus-tests
  import:         common-language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    Coop.Plutus.Test
    Coop.Plutus.Test.Generators

  build-depends:
    , base
    , bytestring
    , containers
    , coop-hs-types
    , coop-plutus
    , data-default
    , hspec
    , hspec-core
    , plutarch
    , plutarch-test
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , text
