cabal-version: 3.0
name:          coop-publisher
version:       0.1.0.0
maintainer:    info@mlabs.city
author:        mlabs-haskell
synopsis:      gRPC CoopPublisher service implementation
build-type:    Simple

executable coop-publisher-cli
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:        -Wall -Werror -threaded
  build-depends:
    , base
    , bytestring
    , coop-proto
    , http2-grpc-proto-lens
    , http2-grpc-types
    , microlens
    , proto-lens
    , proto-lens-protobuf-types
    , proto-lens-runtime
    , text
    , warp
    , warp-grpc
    , warp-tls
