cabal-version: 3.0
name:          coop-validation
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
maintainer:    info@mlabs.city
author:        mlabs-haskell
description:
  COOP validation (validators and minting policies) written in Plutarch

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wunused-do-bind
    -Wpartial-type-signatures -Wmissing-export-lists
    -Wincomplete-record-updates -Wmissing-deriving-strategies
    -Wname-shadowing -Wunused-foralls -fprint-explicit-foralls
    -fprint-explicit-kinds -fwarn-missing-import-lists
    -Wredundant-constraints -Wmissing-export-lists
    -Wmissing-deriving-strategies -Wname-shadowing -Wunused-packages

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    QualifiedDo
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  exposed-modules:
    Coop.Validation
    Coop.Validation.Aux
    Coop.Validation.Policies.Authentication
    Coop.Validation.Policies.Aux
    Coop.Validation.Policies.Certificate
    Coop.Validation.Policies.FactStatement
    Coop.Validation.Policies.Main
    Coop.Validation.Queries
    Coop.Validation.Validators.Certificate
    Coop.Validation.Validators.Main

  hs-source-dirs:  src
  build-depends:
    , base
    , bytestring
    , cryptonite
    , generics-sop
    , lbf-coop-plutus-api-plutarch
    , lbf-plutus-plutarch
    , lbf-prelude-plutarch
    , lbr-plutarch
    , memory
    , plutarch
    , plutarch-extra
    , plutus-ledger-api
    , plutus-tx

executable coop-validation-cli
  import:         common-language
  main-is:        Main.hs
  hs-source-dirs: app
  other-modules:  Coop.Cli.Compile
  build-depends:
    , aeson
    , base
    , bytestring
    , coop-validation
    , optparse-applicative
    , plutarch

test-suite coop-validation-tests
  import:         common-language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    Coop.Plutus.Test
    Coop.Plutus.Test.Generators

  build-depends:
    , base
    , bytestring
    , containers
    , coop-validation
    , hspec
    , plutarch
    , plutarch-test
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck
    , serialise
    , text
