cabal-version:      3.0
name:               oracle-pure
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         info@mlabs.city
author:             mlabs-haskell
homepage:           mlabs.city
category:           Network
extra-source-files:
  CHANGELOG.md
  README.md

executable oracle-pure-cli
  main-is:            Main.hs
  hs-source-dirs:     app
  other-modules:
    Cardano.Oracle.Pure.Datums
    Cardano.Oracle.Pure.MerkleTree

  default-language:   Haskell2010
  default-extensions:
    NoMonomorphismRestriction
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    InstanceSigs
    LambdaCase
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PatternSynonyms
    PolyKinds
    PostfixOperators
    QuantifiedConstraints
    RankNTypes
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  ghc-options:        -Wall -Werror
  build-depends:
    , aeson
    , base
    , bytestring
    , containers
    , cryptohash
    , generic-arbitrary
    , QuickCheck
    , relude
    , row-types

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude),
    relude
