cabal-version: 3.0
name:          oracle-service
version:       0.1.0.0
maintainer:    info@mlabs.city
author:        mlabs-haskell
synopsis:      Cardano Open Oracle gRPC service
build-type:    Simple

executable oracle-service-cli
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -Werror -threaded
  build-depends:
    , base
    , bytestring
    , http2-grpc-proto-lens
    , http2-grpc-types
    , microlens
    , oracle-proto
    , proto-lens
    , proto-lens-protobuf-types
    , proto-lens-runtime
    , text
    , warp
    , warp-grpc
    , warp-tls
