cabal-version:      3.0
name:               cardano-open-oracle-protocol
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:           mlabs.city

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             mlabs-haskell
maintainer:         info@mlabs.city

-- A copyright notice.
-- copyright:
category:           Network
extra-source-files:
    CHANGELOG.md
    README.md

executable cardano-open-oracle-protocol
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:    OrxFax

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   app
    default-language: Haskell2010
